--- a/papers/ipc2011/ipc2011.tex
+++ b/papers/ipc2011/ipc2011.tex
@@ -27,24 +27,24 @@
 
 Parameter tuning is basically a general optimization problem applied off-line to find the best parameters for complex algorithms, for example for Evolutionary Algorithms (EAs). Whereas the efficiency of EAs has been demonstrated on several application domains \cite{practice08,ParameterSettingBook07}, they usually need computationally expensive parameter tuning. Consequently, one is tempted to use either the default parameters of the framework he is using, or parameter values given in the literature for problems that are similar to his one. 
 
-there are as many parameter tuning algorithms as optimization techniques \cite{Eiben2007}, \cite{Montero:2010}. However, several specialized methods have been proposed, and the most prominent today are Racing \cite{birattari2002}, REVAC \cite{Nannen07}, SPO \cite{SPO:CEC05}, and ParamILS \cite{ParamILS-JAIR}. All these approaches face the same crucial generalization issue: can a parameter set that has been optimized for a given problem be successfully used to another one? The answer of course depends on the similarity of both problems. However, even in an optimization domain as precisely defined as AI Planning, there are very few results describing meaningful similarity measures between problem instances. 
+There may be as many parameter tuning algorithms as optimization techniques \cite{Eiben2007}, \cite{Montero:2010}. However, several specialized methods have been proposed, and the most prominent today are Racing \cite{birattari2002}, REVAC \cite{Nannen07}, SPO \cite{SPO:CEC05}, and ParamILS \cite{ParamILS-JAIR}. All these approaches face the same crucial generalization issue: can a parameter set that has been optimized for a given problem be successfully used to another one? The answer of course depends on the similarity of both problems. 
 
 Unfortunately, until now, nobody has yet proposed a set of features for AI Planning problems in general, that would be sufficient to describe the characteristics of a problem, like it was done in the SAT domain \cite{Hutter06}. This paper makes a step toward a framework for parameter tuning applied generally for AI Planning and proposes a preliminary set of features. The Learn-and-Optimize (LaO) framework consists of the combination of optimizing (i.e., parameter tuning) and learning, i.e., finding the mapping between features and best parameters. Furthermore, the reuslts of learning will already be useful during further the optimization phases, using the learned model as in standard surrogate-model based techniques.
 
 In this paper, the target optimization technique is Evolutionary Algorithms (EA), more precisely the evolutionary AI planner called Divide-and-Evolve (DaE). However, DaE will be here considered as a black-box algorithm, without any modification for the purpose of this work than its original version described in \cite{BibEvoCop:2010}. 
 
-The paper is organized as follows: Section \ref{section:dae} describes the evolutionary  Divide-and-Evolve algorithm. Section \ref{section:general} introduces the original, top level parameter tuning method, Learn-and-Optimize. Finally, \ref{section:implementation} describes the implementation of the framework used in the Planning and Learning Part of IPC2011.
+The paper is organized as follows: Section \ref{section:dae} describes the evolutionary  Divide-and-Evolve algorithm. Section \ref{section:general} introduces the original, top level parameter tuning method, Learn-and-Optimize. Finally, section \ref{section:implementation} describes the implementation of the framework used in the Planning and Learning Part of IPC2011.
 
 \section{Divide-and-Evolve}
 \label{section:dae}
 
-Divide-and-Evolve (DaE) -- a novel hybridization of Evolutionary Algorithms (EAs) with AI Planning -- has been first proposed in \cite{DAE:EvoCOP06}. For a complete formal description, see \cite{Bibai:ICAPS2010}.
+Divide-and-Evolve (DaE) -- a novel hybridization of Evolutionary Algorithms (EAs) with AI Planning -- has been first proposed in \cite{DAE:EvoCOP06}. For a complete formal description, see \cite{Bibai:ICAPS2010}. 
 
-The basic idea of DaE in order to solve a planning task ${\cal P}_D(I,G)$ is to find a sequence of states $S_1, \ldots, S_n$, and to use some embedded planner to solve the series of planning problems ${\cal P}_D(S_{k},S_{k+1})$, for $k \in [0,n]$ (with the convention that $S_0 = I$ and $S_{n+1} = G$). The generation and optimization of the sequence of states $(S_i)_{i \in [1,n]}$ is driven by an evolutionary algorithm. 
+A planning problem defined on domain $D$ with initial state $I$ and goal $G$ will be denoted in the following as ${\cal P}_D(I,G)$. The basic idea of DaE in order to solve a planning task ${\cal P}_D(I,G)$ is to find a sequence of states $S_1, \ldots, S_n$, and to use some embedded planner to solve the series of planning problems ${\cal P}_D(S_{k},S_{k+1})$, for $k \in [0,n]$ (with the convention that $S_0 = I$ and $S_{n+1} = G$). The generation and optimization of the sequence of states $(S_i)_{i \in [1,n]}$ is driven by an evolutionary algorithm. 
 The fitness (quality criterion) of a list of partial states $S_1, \ldots,$ $S_n$ is computed by repeatedly calling the external 'embedded' planner to solve the sequence of problems ${\cal P}_D(S_{k},S_{k+1})$, $\{k=0,\ldots,n\}$. The concatenation of the corresponding plans (possibly with some compression step) is a solution of the initial problem.
 A sub-optimal, but fast planner is used as an embedded planner: YAHSP \cite{V:icaps04} is a lookahead strategy planning system for sub-optimal planning which uses the  actions in the relaxed plan to compute reachable states in order to speed up the search process. 
 
-A state is a list of atoms built over the set of predicates and the set of object instances. However, searching the space of complete states would result in a rapid explosion of the size of the search space. Moreover, goals of planning problem need only be to defined as partial states. It thus seems more practical to search only sequences of partial states, and to limit the choice of possible atoms used within such partial states. However, this raises the issue of the choice of the atoms to be used to represent individuals, among all possible atoms.
+A state is a list of atoms built over the set of predicates and the set of object instances. However, searching the space of complete states would result in a rapid explosion of the size of the search space. Moreover, goals of planning problem need only be to defined as partial states. It thus seems more practical to search only sequences of partial states, and to limit the choice of possible atoms used within such partial states. 
 
 An individual in DaE is hence represented as a variable-length ordered time-consistent list of partial states, and each state is a variable-length list of atoms that are not pairwise mutex, as far as the initial grounding of all atoms  can tell (exactly determining if two atoms are mutex amounts to solving a complete planning problem). Furthermore, all operators that manipulate the representation (see below) maintain the chronology between atoms and the approximate local consistency of a state, i.e. avoid pairwise mutexes.
 
@@ -58,7 +58,7 @@ The complete list of DaE parameters that required some tuning is given in Table 
 \section{The General LaO Framework}
 \label{section:general}
 
-In Parameter Tuning applied to AI PLanning tuning one instance has of course a sense if only that instance is to be solved. Parameters tuned for one instance however, may not be optimal for other instances, as \cite{BibGECCO:2010} demonstrates it. This very same paper also demonstrates that global tuning for several domains is even more inferior.
+If parameter tuning is applied to AI Planning, tuning one instance has of course a sense if only that instance is to be solved. Parameters tuned for one instance however, may not be optimal for other instances, as \cite{BibGECCO:2010} demonstrates it. This very same paper also demonstrates that global tuning for several domains is even more inferior.
 
 Our Learn-and-Optimize framework (LaO) aims to answer this question and to solve intra-domain generalization problems, by adding learning to optimization. We may assume that there might be a relation between some features of the instance and the optimal parameters. If we could learn such a relation representable by a mapping, we could account both for intra- and extra-domain variability of the optimal parameters. The features could describe differences both between instances from the same domain, both differences between domains. To do this, we try to extract features both from the domain-file and the instance-file.
 
@@ -87,7 +87,7 @@ There is one element added to a conventional CMA-ES, and this is gene-transfer b
 
 Our realization of our LaO algorithm uses the Shark library (\cite{shark08}) for CMA-ES and the FANN library for ANN (\cite{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster with approximately 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, therefore our algorithm contains a scheduler to use the free capacity on this cluster.
 
-Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time, which depends on the hardware. Therefore, for each evaluation the number of evaluations is fixed for DaE. Moreover, since DaE is not deterministic, we carried out 11 runs and took the median fitness-value as the result for that instance and that parameter-settings.
+Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time, which depends on the hardware. Therefore, for each evaluation the number of YAHSP evaluations is fixed for DaE. Moreover, since DaE is not deterministic, we carried out 11 runs and took the median fitness-value as the result for that instance and that parameter-settings.
 
 \begin{table}[ht]
 \centering
