--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -8,7 +8,7 @@
 \usepackage{amssymb}
 \usepackage{color}
 \usepackage{subfig}
-\DeclareCaptionType{copyrightbox}
+%\DeclareCaptionType{copyrightbox}
 
 \def\BibTeX{Bib\TeX}
 \parindent=0pt
@@ -217,7 +217,7 @@ In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-pu
 Name & \ Default & \ CMA-ES &  Transferer & ANN \\ 
 \hline
 Freecell & ~0 -- ~9& 64 -- 66  & 18 -- ~8  & 18 -- 17     \\
-Grid & ~2 -- 24 & 66 -- ~6  & 16 -- 11 & 17 -- ~5  &    \\
+Grid & ~2 -- 24 & 66 -- ~60  & 16 -- 11 & 17 -- ~5  &    \\
 Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
 \hline
 \end{tabular}
