--- a/papers/ipc2011/ipc2011.tex
+++ b/papers/ipc2011/ipc2011.tex
@@ -9,7 +9,7 @@
 
 \begin{document}
 
-\title{Optimize-and-Learn: an Algorithm Framework used for Parameter Tuning of the Divide-and-Evolve Method applied to AI PLanning}
+\title{Optimize-and-Learn: a Parameter Tuning Framework applied for the Divide-and-Evolve Method used to AI PLanning}
 
 
 \author{M{\'a}ty{\'a}s Brendel \\ \\ Projet TAO \\ INRIA Saclay \& LRI\\ Universit{\'e} Paris Sud \\ Orsay, France\\ matthias.brendel@lri.fr   
