* fixed some mistakes on the legend of the speedups graphs

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -709,7 +709,7 @@ population size is small.
     \hfill
     \subfigure[openstacks 17]{\includegraphics[width=0.23\textwidth]{images/openstacks_pop_time_speedup.pdf}}
   \end{center}
-  \caption{Absolute speedup distributions of 11 runs of \DAEYAHSP\ according to the population size, on the both sequential elevators-12 and openstacks problems, using 48 processors.}
+  \caption{Absolute speedup distributions of 11 runs of \DAEYAHSP\ according to the population size, on the both sequential elevators-12 and openstacks-17 problems, using 48 processors.}
   \label{fig:speedup_pop}
 \end{figure}
 
