--- a/papers/icaps2011/icaps2011.tex
+++ b/papers/icaps2011/icaps2011.tex
@@ -19,7 +19,7 @@
 }
 
 \title{Instance-Based Parameter Tuning\\
-for Evolutionary AI Planning -- $Revision:  $}
+for Evolutionary AI Planning -- $Revision: 1 $}
 
 \author{M{\'a}ty{\'a}s Brendel  
 \and Marc Schoenauer \\ 
