--- a/papers/icaps2011/icaps2011.tex
+++ b/papers/icaps2011/icaps2011.tex
@@ -22,7 +22,7 @@
 }
 
 \title{Instance-Based Parameter Tuning\\
-for Evolutionary AI Planning -- $Rev:$}
+for Evolutionary AI Planning -- $Revision: 472 $}
 
 \author{M{\'a}ty{\'a}s Brendel  
 \and Marc Schoenauer \\ 
