--- a/papers/icaps2011/icaps2011.tex
+++ b/papers/icaps2011/icaps2011.tex
@@ -12,6 +12,7 @@
 \usepackage{color}
 \usepackage{subfig}
 \usepackage{graphicx}
+\usepackage{svn-multi}
 
 
 
@@ -22,7 +23,7 @@
 }
 
 \title{Instance-Based Parameter Tuning\\
-for Evolutionary AI Planning -- $Revision: 472 $}
+for Evolutionary AI Planning -- Revision: \svnid{$Id$}}
 
 \author{M{\'a}ty{\'a}s Brendel  
 \and Marc Schoenauer \\ 
