--- a/papers/icaps2011/icaps2011.tex
+++ b/papers/icaps2011/icaps2011.tex
@@ -250,7 +250,7 @@ Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.5\textwidth]{results/freecell_lao_objects_mutrate.png}
-	\caption{Relation of the feature "number of objects" and the parameter "mutation rate" in LaO, in the train-set in domain Freecell. Values of 		"mutatiom rate" are the optimal values found by LaO. This looks bad, but not unexpected. We can explain this. It is however questionable to show 		it.}
+	\caption{Relation between the feature "number of objects" and the parameter "mutation rate" in LaO, in the train-set in domain Freecell. Values of 		"mutatiom rate" are the optimal values found by LaO. This looks bad, but not unexpected. We can explain this. It is however questionable to show 		it.}
 	\label{figure:laoobjectmutrate}  
 \end{figure}
 
@@ -258,7 +258,7 @@ Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.5\textwidth]{results/freecell_test_objects_mutrate.png}
-	\caption{Relation of the feature "number of objects" and the parameter "mutation rate" as learned by the ANN, during evaluation on the test-set in 		domain Freecell.}
+	\caption{Relation between the feature "number of objects" and the parameter "mutation rate" as learned by the ANN, during evaluation on the test-set in 		domain Freecell.}
 	\label{figure:ANNobjectmutate}  
 \end{figure}
 
