--- a/papers/IPC2011_DAE/ipc_dae_2011.tex
+++ b/papers/IPC2011_DAE/ipc_dae_2011.tex
@@ -110,6 +110,9 @@ ratio of feasible individuals is over a given threshold or a maximum boundary ha
 been reached. By default this number is doubled at each iteration until at least
 one feasible individual is produced or 100000 has been reached.
 
+Furthermore we add the capability to perform restarts within a time contract in
+order to increase solution quality.
+
 \section{Conclusion}
 
 \bibliographystyle{aaai}
