--- a/papers/IPC2011_DAE/dae_mt.bib
+++ b/papers/IPC2011_DAE/dae_mt.bib
@@ -147,6 +147,13 @@ OpenMP
   publisher={AAAI Press}
 }
 
+@InProceedings{yahsp:ipc:2011,
+  author={Vidal, Vincent},
+  title={{YAHSP2: Keep it Simple, Stupid}},
+  booktitle={$7^{th}$ International Planning Competition (IPC-2011), Deterministic Part},
+  year={2011}
+}
+
 % Planning
 
 @Article{pddl:jair2003,
